force-app/main/default/objects/Related_Source__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <formula>IF(
  Is_Locked__c,
  &quot;🟥 🔒 Locked&quot;,
  &quot;🟩 🔓 Unlocked&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stage</label>
    <type>Text</type>
</CustomField>