force-app/main/default/objects/Related_Source__c/fields/TL_Review_Done__c.field-meta.xml
<CustomField>
    <fullName>TL_Review_Done__c</fullName>
    <formula>TL_RHS_Count__c &gt;= 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TL Review Done</label>
    <type>Checkbox</type>
</CustomField>