force-app/main/default/objects/Related_Source__c/fields/TL_RHS_Review__c.field-meta.xml
<CustomField>
    <fullName>TL_RHS_Review__c</fullName>
    <label>TL/RHS Review</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>