force-app/main/default/objects/Related_Source__c/fields/Transfered_By__c.field-meta.xml
<CustomField>
    <fullName>Transfered_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transfered By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Related_Sources8Ift</relationshipName>
    <type>Lookup</type>
</CustomField>