force-app/main/default/objects/Related_Source__c/fields/Unqualified_Reason1__c.field-meta.xml
<CustomField>
    <fullName>Unqualified_Reason1__c</fullName>
    <label>Related source Unqualified Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>