force-app/main/default/objects/Related_Source__c/fields/Unqualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>Unqualified_Reason__c</fullName>
    <label>Unqualified Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Within Budget Range</fullName>
            </value>
            <value>
                <fullName>Location Mismatch</fullName>
            </value>
            <value>
                <fullName>Possession time issue</fullName>
            </value>
            <value>
                <fullName>Size Mismatch</fullName>
            </value>
            <value>
                <fullName>Not Enquired</fullName>
            </value>
            <value>
                <fullName>Already Allocated</fullName>
                <isActive>false</isActive>
                <label>Already Allocated</label>
            </value>
            <value>
                <fullName>Booked With Competitor</fullName>
                <isActive>false</isActive>
                <label>Booked With Competitor</label>
            </value>
            <value>
                <fullName>Booked with Channel Partner</fullName>
                <isActive>false</isActive>
                <label>Booked with Channel Partner</label>
            </value>
            <value>
                <fullName>Budget</fullName>
                <isActive>false</isActive>
                <label>Budget</label>
            </value>
            <value>
                <fullName>COVID19</fullName>
                <isActive>false</isActive>
                <label>COVID19</label>
            </value>
            <value>
                <fullName>CP Clash</fullName>
                <isActive>false</isActive>
                <label>CP Clash</label>
            </value>
            <value>
                <fullName>Casual Enquiry</fullName>
                <isActive>false</isActive>
                <label>Casual Enquiry</label>
            </value>
            <value>
                <fullName>Client has Blocked</fullName>
                <isActive>false</isActive>
                <label>Client has Blocked</label>
            </value>
            <value>
                <fullName>Delivery Timeline too long</fullName>
                <isActive>false</isActive>
                <label>Delivery Timeline too long</label>
            </value>
            <value>
                <fullName>Dimension</fullName>
                <isActive>false</isActive>
                <label>Dimension</label>
            </value>
            <value>
                <fullName>Dropped the Plan of Buying</fullName>
                <isActive>false</isActive>
                <label>Dropped the Plan of Buying</label>
            </value>
            <value>
                <fullName>Dropped/ Postponed</fullName>
                <isActive>false</isActive>
                <label>Dropped/ Postponed</label>
            </value>
            <value>
                <fullName>Duplicate Lead</fullName>
                <isActive>false</isActive>
                <label>Duplicate Lead</label>
            </value>
            <value>
                <fullName>Frequently disconnecting</fullName>
                <isActive>false</isActive>
                <label>Frequently disconnecting</label>
            </value>
            <value>
                <fullName>Handover Timeline</fullName>
                <isActive>false</isActive>
                <label>Handover Timeline</label>
            </value>
            <value>
                <fullName>Interested In New Project</fullName>
                <isActive>false</isActive>
                <label>Interested In New Project</label>
            </value>
            <value>
                <fullName>Interested in Plots/Villas/Commercial</fullName>
                <isActive>false</isActive>
                <label>Interested in Plots/Villas/Commercial</label>
            </value>
            <value>
                <fullName>Junk Leads</fullName>
                <isActive>false</isActive>
                <label>Junk Leads</label>
            </value>
            <value>
                <fullName>Lead older than 6 months</fullName>
                <isActive>false</isActive>
                <label>Lead older than 6 months</label>
            </value>
            <value>
                <fullName>Location</fullName>
                <isActive>false</isActive>
                <label>Location</label>
            </value>
            <value>
                <fullName>Looking For RTM</fullName>
                <isActive>false</isActive>
                <label>Looking For RTM</label>
            </value>
            <value>
                <fullName>Looking for Payment Plan</fullName>
                <isActive>false</isActive>
                <label>Looking for Payment Plan</label>
            </value>
            <value>
                <fullName>Model Apartment</fullName>
                <isActive>false</isActive>
                <label>Model Apartment</label>
            </value>
            <value>
                <fullName>Needs More Discount or Looking for better deal</fullName>
                <isActive>false</isActive>
                <label>Needs More Discount or Looking for better deal</label>
            </value>
            <value>
                <fullName>No Discount</fullName>
                <isActive>false</isActive>
                <label>No Discount</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>