force-app/main/default/objects/Related_Source__c/fields/Warm_Rating__c.field-meta.xml
<CustomField>
    <fullName>Warm_Rating__c</fullName>
    <formula>ISPICKVAL( Enquiry_Category__c ,&apos;Warm&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warm Rating</label>
    <type>Checkbox</type>
</CustomField>