force-app/main/default/objects/Related_Source__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <columns>Lead_status1__c</columns>
    <columns>Name__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Company_Name__c</columns>
    <columns>STM2__c</columns>
    <columns>Allocated_Project__c</columns>
    <columns>Site_Visit_Feedback__c</columns>
    <columns>Lead_OwnerSecondary__c</columns>
    <columns>Source_Type__c</columns>
    <columns>Site_Visit_Completed__c</columns>
    <columns>Last_Note__c</columns>
    <columns>Channel_Partner_Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Locked__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All</label>
</ListView>