force-app/main/default/objects/Related_Source__c/listViews/Copy_of_This_Week.listView-meta.xml
<ListView>
    <fullName>Copy_of_This_Week</fullName>
    <columns>NAME</columns>
    <columns>SLead__c</columns>
    <columns>Allocated_Project__c</columns>
    <columns>Lead_Type__c</columns>
    <columns>Lead_status1__c</columns>
    <columns>Source_Type__c</columns>
    <columns>Secondary_source__c</columns>
    <columns>STM2__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Channel_Partner1__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_WEEK</value>
    </filters>
    <filters>
        <field>Is_Locked__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Last Week</label>
</ListView>