force-app/main/default/objects/Related_Source__c/listViews/Copy_of_Zuari_Gangothri_Tribhuja.listView-meta.xml
<ListView>
    <fullName>Copy_of_Zuari_Gangothri_Tribhuja</fullName>
    <columns>NAME</columns>
    <columns>Expiry_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Lead_status1__c</columns>
    <columns>Name__c</columns>
    <columns>Channel_Partner1__c</columns>
    <columns>Allocated_Project__c</columns>
    <columns>Site_Visit_Feedback__c</columns>
    <columns>Lead_OwnerSecondary__c</columns>
    <columns>Source_Type__c</columns>
    <columns>Lead_Type__c</columns>
    <columns>Rating__c</columns>
    <columns>Last_Note__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Locked__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Allocated_Project__c</field>
        <operation>equals</operation>
        <value>Zuari Gangothri Tribhuja</value>
    </filters>
    <filters>
        <field>Expiry_Date__c</field>
        <operation>equals</operation>
        <value>NEXT_WEEK</value>
    </filters>
    <filters>
        <field>Source_Type__c</field>
        <operation>equals</operation>
        <value>Channel partner</value>
    </filters>
    <label>This Week ZGT Expiring CP Lead</label>
</ListView>