force-app/main/default/objects/Related_Source__c/listViews/Meta_Leads_Direct.listView-meta.xml
<ListView>
    <fullName>Meta_Leads_Direct</fullName>
    <columns>NAME</columns>
    <columns>Created_Date_C__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>SLead__c</columns>
    <columns>Lead_status1__c</columns>
    <columns>Status1__c</columns>
    <columns>Enquiry_Category__c</columns>
    <columns>Source_Type__c</columns>
    <columns>Chat_Conversation__c</columns>
    <columns>Secondary_source__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Last_Comment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Source_Type__c</field>
        <operation>notEqual</operation>
        <value>Channel partner</value>
    </filters>
    <filters>
        <field>Allocated_Project__c</field>
        <operation>equals</operation>
        <value>Zuari Gangothri Tribhuja</value>
    </filters>
    <filters>
        <field>Is_Locked__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Created_Date_C__c</field>
        <operation>greaterOrEqual</operation>
        <value>4/20/2026 12:00 AM</value>
    </filters>
    <filters>
        <field>Lead_status1__c</field>
        <operation>notEqual</operation>
        <value>SV Completed</value>
    </filters>
    <label>Meta Leads (Direct)</label>
    <sharedTo>
        <group>BLR_Sales</group>
    </sharedTo>
</ListView>