force-app/main/default/objects/Related_Source__c/listViews/Zuari_Gangothri_Tribhuja_Todays_Leads.listView-meta.xml
<ListView>
    <fullName>Zuari_Gangothri_Tribhuja_Todays_Leads</fullName>
    <columns>NAME</columns>
    <columns>Allocated_Project__c</columns>
    <columns>Lead_Status__c</columns>
    <columns>Lead_Type__c</columns>
    <columns>STM2__c</columns>
    <columns>Source_Type__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Lead_Id__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Stage__c</columns>
    <columns>Channel_Partner1__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Is_Locked__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Allocated_Project__c</field>
        <operation>equals</operation>
        <value>Zuari Gangothri Tribhuja</value>
    </filters>
    <label>Zuari Gangothri Tribhuja Todays</label>
</ListView>