force-app/main/default/objects/Related_Source__c/listViews/Zuari_Garden_City_Plots.listView-meta.xml
<ListView>
    <fullName>Zuari_Garden_City_Plots</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Lead_status1__c</columns>
    <columns>Name__c</columns>
    <columns>Channel_Partner1__c</columns>
    <columns>Company_Name__c</columns>
    <columns>Allocated_Project__c</columns>
    <columns>Site_Visit_Feedback__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Lead_OwnerSecondary__c</columns>
    <columns>Source_Type__c</columns>
    <columns>Lead_Type__c</columns>
    <columns>Rating__c</columns>
    <columns>Site_Visit_Completed__c</columns>
    <columns>Last_Note__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Locked__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Allocated_Project__c</field>
        <operation>equals</operation>
        <value>Zuari Garden City</value>
    </filters>
    <label>Zuari Garden City - Plots</label>
</ListView>